Opened 18 years ago

Closed 17 years ago

Last modified 19 months ago

#1022 closed bug (fixed)

Dead keys and inlineinput crash Mail.

Reported by: kaoutsis Owned by: jackburton
Priority: normal Milestone: R1/alpha1
Component: Kits/Interface Kit Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by jackburton)

Open Mail for new mail. Fill <To> Fill <Subject> with bar You can write Greek here, as normal, no crash here.

Open Preferences => Keymap select Greek keyboard (you are suppose that you want to write Greek:-) After selecting the Greek keymap, you are writing to the body of the mail some greek letters. When you press key for tonos (english ; or raw key 0x45) you go to gdb. If you want to debug, you must type some English instructions into the Terminal, for example "where".

So you go to the keymap program to set language to American, when click to American, you go directly to KDL. TODO: writing the kdl message.

ps: opening a already composed email with full greek text, there is no crash.

Attachments (2)

Mail-kernel-messages.txt (1.5 KB ) - added by kaoutsis 18 years ago.
Mail-dbg.txt (2.4 KB ) - added by kaoutsis 18 years ago.
"Et voila" what the gdb said…

Download all attachments as: .zip

Change History (13)

by kaoutsis, 18 years ago

Attachment: Mail-kernel-messages.txt added

comment:1 by kaoutsis, 18 years ago

Tested with hrev20414: i no longer go to KDL, but to the usual gdb debug terminal, so i can now switch languages to the Keymap. I have also attached some kernel messages, inaugurating my new null modem cable:) TODO: writing what gdb said to his terminal window.

by kaoutsis, 18 years ago

Attachment: Mail-dbg.txt added

"Et voila" what the gdb said...

comment:2 by korli, 18 years ago

Component: - Applications/MailKits/Interface Kit
Owner: changed from axeld to jackburton

Seems to happen in BTextView ...

in reply to:  2 comment:3 by jackburton, 18 years ago

Replying to korli:

Seems to happen in BTextView ...

Yeah, although the code in there looks harmless... I wonder if memory gets corrupt somewhere.

comment:4 by jackburton, 18 years ago

Actually I can't reproduce this on my laptop.

comment:5 by kaoutsis, 18 years ago

tested again with hrev20843 (clean install): is still there.

in reply to:  5 comment:6 by jackburton, 18 years ago

Replying to kaoutsis:

tested again with hrev20843 (clean install): is still there.

Ok, I can reproduce it in vmware.

comment:7 by jackburton, 17 years ago

Milestone: R1R1/alpha

comment:8 by jackburton, 17 years ago

Status: newassigned

comment:9 by jackburton, 17 years ago

Description: modified (diff)
Summary: Greek (keyboard) bug for BeMail.Dead keys and inlineinput crash Mail.

comment:10 by jackburton, 17 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev22444

in reply to:  10 comment:11 by kaoutsis, 17 years ago

Replying to jackburton:

Fixed in hrev22444

thanks!

Note: See TracTickets for help on using tickets.